get ad dynamically

--- a/src/ad-server/shopping.html
+++ b/src/ad-server/shopping.html
@@ -3,6 +3,6 @@
   <head>
     <title>Ad Page</title>
   <body>
-    <h1>This is an advertisement</h1>
+    <h1>This is a shopping advertisement</h1>
   </body>
 </html>
