properly execute ad script

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>Webpack App</title>
+    <!-- ad script-->
+    <script 
+      src="http://b.com/getJS" 
+      type="text/javascript"
+      defer
+      async
+    ></script>
+    <!-- ad script end-->
   <body>
     <div id="root"></div>
   </body>
